//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Gistalk" {
  database_type: 'PostgreSQL'
  Note: 'Gistalk Database'
}

Table user {
  uuid String [pk]
  name String [not null]
  consent Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  Record record [not null]
  RecordLike record_like [not null]
  BookMark bookmark [not null]
}

Table professor {
  id Int [pk, increment]
  name String [not null]
  LectureSectionProfessor lecture_section_professor [not null]
}

Table lecture_section_professor {
  sectionId Int [not null]
  lectureId Int [not null]
  professorId Int [not null]
  year Int [not null]
  semester Semester [not null]
  LectureSection lecture_section [not null]
  Professor professor [not null]

  indexes {
    (sectionId, lectureId, professorId, year, semester) [pk]
  }
}

Table lecture_code {
  code String [pk]
  lectureId Int [not null]
  Lecture lecture [not null]
}

Table lecture {
  id Int [pk, increment]
  name String [not null]
  LectureCode lecture_code [not null]
  LectureSection lecture_section [not null]
}

Table lecture_section {
  id Int [not null]
  lectureId Int [not null]
  year Int [not null]
  semester Semester [not null]
  capacity Int [not null]
  registrationCount Int
  fullCapacityTime Int
  Lecture lecture [not null]
  LectureSectionProfessor lecture_section_professor [not null]
  Record record [not null]
  BookMark bookmark [not null]

  indexes {
    (id, lectureId, year, semester) [pk]
  }
}

Table bookmark {
  lectureId Int [not null]
  sectionId Int [not null]
  userUuid String [not null]
  year Int [not null]
  semester Semester [not null]
  LectureSection lecture_section [not null]
  User user [not null]

  indexes {
    (lectureId, sectionId, userUuid) [pk]
  }
}

Table record {
  id Int [pk, increment]
  difficulty Int [not null]
  skill Int [not null]
  helpfulness Int [not null]
  interest Int [not null]
  load Int [not null]
  generosity Int [not null]
  review String [not null]
  recommendation Recommendation [not null]
  semester Semester [not null]
  year Int [not null]
  createdAt DateTime [default: `now()`, not null]
  lectureId Int [not null]
  sectionId Int [not null]
  userUuid String [not null]
  User user [not null]
  LectureSection lecture_section [not null]
  RecordLike record_like [not null]
}

Table record_like {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  userUuid String [not null]
  user user [not null]
  recordId Int [not null]
  record record [not null]
}

Enum Semester {
  SPRING
  SUMMER
  FALL
  WINTER
  ALL
}

Enum Recommendation {
  YES
  NO
  MAYBE
}

Ref: lecture_section_professor.(sectionId, lectureId, year, semester) > lecture_section.(id, lectureId, year, semester)

Ref: lecture_section_professor.professorId > professor.id

Ref: lecture_code.lectureId > lecture.id

Ref: lecture_section.lectureId > lecture.id

Ref: bookmark.(lectureId, sectionId, year, semester) > lecture_section.(lectureId, id, year, semester)

Ref: bookmark.userUuid > user.uuid

Ref: record.userUuid > user.uuid

Ref: record.(lectureId, sectionId, year, semester) > lecture_section.(lectureId, id, year, semester)

Ref: record_like.userUuid > user.uuid

Ref: record_like.recordId > record.id